# checkmark

./: .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  auth.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/middleware/: __init__.py  move_validation.py
backend/scripts/: manage_admins.py
backend/services/: ai_model_service.py  chess_engine.py  match_service.py
backend/tests/: test_api.py  test_chess_engine.py  test_schemas.py
backend/tools/: chess_tools.py
backend/utils/: mongo_db.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/benchmarks/: route.ts
frontend/app/api/matches/: route.ts
frontend/app/api/matches/[matchId]/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/matches/: page.tsx
frontend/app/matches/[matchId]/: page.tsx
frontend/app/models/: page.tsx
frontend/app/models/[modelId]/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/benchmarks/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/admin/matches/: page.tsx
frontend/src/app/admin/models/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/matches/: page.tsx
frontend/src/app/matches/[matchId]/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/components/ui/: navbar.tsx
frontend/src/lib/: api.ts  auth.ts  sse.ts
frontend/src/types/: index.ts
(+4 files in other folders)
