[tool.poetry]
name = "checkmark-backend"
version = "1.0.0"
description = "Checkmark - AI Chess Benchmarking Platform Backend"
authors = ["Checkmark Team"]

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.3.0"
litellm = "^1.0.0"
pydantic-settings = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^2.0.0"}
python-multipart = "^0.0.6"
pymongo = "^4.0.0"
motor = "^3.3.0"
aiofiles = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
